Minor z-index fix...

--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ section {
   align-items: center;
   padding-left: 2rem;
   padding-right: 2rem;
-  z-index: 1;
+  z-index: 99;
 }
 
 /* .open {
@@ -139,7 +139,7 @@ nav li {
   width: 100vw;
   position: fixed;
   margin-top: 3rem;
-  z-index: 2;
+  z-index: 99;
 }
 
 nav a {
